Add real Google OAuth client ID

--- a/public/index.html
+++ b/public/index.html
@@ -1851,7 +1851,7 @@
         // OAuth Configuration (you can customize these for your OAuth provider)
         const OAUTH_CONFIG = {
             // Google OAuth Configuration - Replace with your actual Google OAuth credentials
-            clientId: 'your-google-client-id-here.apps.googleusercontent.com', // Replace with your actual Google client ID
+            clientId: '332175141657-kaovrtrf6sch0naf9r8an1s1a2m6ngkm.apps.googleusercontent.com', // Replace with your actual Google client ID
             redirectUri: window.location.origin,
             scope: 'openid profile email',
             authUrl: 'https://accounts.google.com/o/oauth2/v2/auth',
