Use clean Vercel URL for OAuth

--- a/public/index.html
+++ b/public/index.html
@@ -1852,7 +1852,7 @@
         const OAUTH_CONFIG = {
             // Google OAuth Configuration - Replace with your actual Google OAuth credentials
             clientId: '332175141657-kaovrtrf6sch0naf9r8an1s1a2m6ngkm.apps.googleusercontent.com', // Replace with your actual Google client ID
-            redirectUri: 'https://bendai-plus-hkkj4parm-pauls-projects-c859078b.vercel.app/api/auth/google',
+            redirectUri: 'https://bendai-plus-web.vercel.app/api/auth/google',
             scope: 'openid profile email',
             authUrl: 'https://accounts.google.com/o/oauth2/v2/auth',
             // For production, you'll need to:
